--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,14 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "outDir": "srv",
+    "outDir": "lib",
     "rootDir": "src",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "declaration": true,
+    "inlineSourceMap": true,
+    "inlineSources": true
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
